--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,20 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+  require_tree .
+  require_self
  */
+
+// Use this: http://dev.ghost.org/css-at-ghost/#namingthings
+// vendor: third-party styles
+// lib: SASS libraries, variables
+// global: can be used on sites that use this admin system (i.e. reset, editor)
+// layout: global layout (e.g. header, footer)
+// components: individual global elements (i.e. forms)
+@import 'lib/variables',
+'lib/mixins',
+'vendor/normalize',
+'vendor/foundation',
+'components/content_area',
+'layout/global',
+'optimadmin/global/editor';
