Header and footer

--- a/app/assets/stylesheets/layout/global.scss
+++ b/app/assets/stylesheets/layout/global.scss
@@ -30,3 +30,11 @@ a {
     //color: $light-purple;
   }
 }
+
+.display-block {
+  display: block;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
