--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,10 +20,17 @@
 // global: can be used on sites that use this admin system (i.e. reset, editor)
 // layout: global layout (e.g. header, footer)
 // components: individual global elements (i.e. forms)
-@import 'lib/variables',
+@import 'optimadmin/global/editor',
+'lib/variables',
 'lib/mixins',
 'vendor/normalize',
 'vendor/foundation',
+'components/google_maps',
 'components/content_area',
+'components/contrast_area',
+'components/navigation',
+'components/forms',
 'layout/global',
-'optimadmin/global/editor';
+'layout/colours',
+'layout/header',
+'layout/footer';
