--- a/app/assets/stylesheets/lib/mixins.scss
+++ b/app/assets/stylesheets/lib/mixins.scss
@@ -17,3 +17,28 @@ $mq-large: 'only screen and (min-width: 1024px)';
     @media #{$mq-large} { @content; }
   }
 }
+
+// http://stackoverflow.com/questions/17181849/placeholder-mixin-scss-css
+@mixin optional-at-root($sel) {
+  @at-root #{if(not &, $sel, selector-append(&, $sel))} {
+    @content;
+  }
+}
+
+@mixin placeholder {
+  @include optional-at-root('::-webkit-input-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root(':-moz-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root('::-moz-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root(':-ms-input-placeholder') {
+    @content;
+  }
+}
