--- a/app/views/optimadmin/shared/sidebar/_module_links.html.erb
+++ b/app/views/optimadmin/shared/sidebar/_module_links.html.erb
@@ -24,6 +24,7 @@
       </div>
 
       <ul class="content-category-list">
+        <%= module_link(model: Industry, path: industries_path) %>
         <% if can? :manage, Optimadmin::MenuItem %>
           <li><%= link_to 'Site Navigation', menu_items_path %></li>
         <% end %>
