Further work on contact module, links, styling tidying

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -11,3 +11,17 @@ textarea {
   padding: em(4px, 14px) em(8px, 14px);
   letter-spacing: 1px;
 }
+
+.actions .light-submit-button {
+  background: $white;
+  color: $black;
+  display: block;
+  font-size: em(14px);
+  text-transform: uppercase;
+  padding: em(15px, 14px) em(55px, 14px);
+  margin: 0 auto;
+
+  &:hover {
+    background: darken($white, 15%);
+  }
+}
