--- a/app/assets/stylesheets/lib/variables.scss
+++ b/app/assets/stylesheets/lib/variables.scss
@@ -7,6 +7,11 @@ $black: #000;
 $white: #fff;
 $grey: #c1c2c5;
 
+$success: #5da423;
+$error: #a4232f;
+
+$link-blue: #20446b;
+
 $background-color: #f0f6ff;
 $content-background-color: #fff;
 
