--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit 'Send Message', class: 'submit-button' %>
+    <%= f.submit 'Send Message', class: 'light-submit-button' %>
   </div>
 
 <% end %>
