--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,6 @@
 // Use this: http://dev.ghost.org/css-at-ghost/#namingthings
 // vendor: third-party styles
 // lib: SASS libraries, variables
-// global: can be used on sites that use this admin system (i.e. reset, editor)
 // layout: global layout (e.g. header, footer)
 // components: individual global elements (i.e. forms)
 @import 'optimadmin/global/editor',
@@ -25,6 +24,8 @@
 'lib/mixins',
 'vendor/normalize',
 'vendor/foundation',
+'components/sticky_sidebar',
+'components/flash_messages',
 'components/google_maps',
 'components/content_area',
 'components/contrast_area',
