--- a/app/assets/stylesheets/components/contrast_area.scss
+++ b/app/assets/stylesheets/components/contrast_area.scss
@@ -1,7 +1,21 @@
 .contrast-area {
   color: $white;
+  padding: em(5px);
+
+  &.border-top {
+    border-top-width: 2px;
+    border-top-style: solid;
+  }
+
+  &.border-bottom {
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+  }
+}
+
+footer .contrast-area {
   padding: em(25px);
-  
+
   &.border-top {
     border-top-width: 11px;
     border-top-style: solid;
