--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -17,6 +17,7 @@
 
       <p>
         We are more than happy to discuss any of your oil and lubrication requirements.
+        <%= link_to 'test', '#' %>
       </p>
 
       <p class="uppercase">
@@ -27,6 +28,8 @@
     <div class="small-6 medium-6 columns">
       <div class="footer contrast-area border-top">
         <h6>Contact Us</h6>
+
+        <%= render 'shared/flash_messages', flash: flash %>
 
         <%= render 'contacts/form' %>
       </div>
