Start of Industry Banners

--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -28,10 +28,8 @@
     <div class="small-6 medium-6 columns">
       <div class="footer contrast-area border-top">
         <h6>Contact Us</h6>
-
-        <%= render 'shared/flash_messages', flash: flash %>
-
-        <%= render 'contacts/form' %>
+        
+        <%= render 'contacts/shared/footer_form' %>
       </div>
     </div>
 
