--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <div class="sticky-contact-expanded">
-    <%= render 'contacts/form' %>
+    <%= render 'contacts/shared/sidebar_form' %>
   </div>
 </div>
 
