Add Home Highlight to products, fix inability to go back to default colour, tidy breadcrumbs

--- a/app/assets/stylesheets/components/breadcrumbs.scss
+++ b/app/assets/stylesheets/components/breadcrumbs.scss
@@ -6,7 +6,11 @@
     display: inline-block;
 
     &:after {
-      content: ">"
+      content: '>';
+    }
+
+    &:last-of-type:after {
+      content: '';
     }
   }
 
