--- a/app/views/optimadmin/products/_form.html.erb
+++ b/app/views/optimadmin/products/_form.html.erb
@@ -57,6 +57,12 @@
         <%= f.check_box :display %>
       </div>
 
+    <div class="field">
+      This field is used if there is only one product group for the industry.
+      <%= f.label :home_highlight %><br>
+        <%= f.check_box :home_highlight %>
+      </div>
+
             <div class="field">
         <%= f.label :suggested_url %><br>
         <%= f.text_field :suggested_url %>
