--- a/app/views/optimadmin/product_ranges/index.html.erb
+++ b/app/views/optimadmin/product_ranges/index.html.erb
@@ -14,13 +14,14 @@
 
   <div class="row collapse module-list-index header">
 
-    <%= list_item 'large-3 small-12' do 'Title' end %>
+    <%= list_item 'large-2 small-12' do 'Title' end %>
     <%= list_item 'large-2 small-12' do 'Industry' end %>
     <%= list_item 'large-2 small-12' do 'Products' end %>
 
     <%= list_item 'large-2 hide-for-medium-down' do 'Image' end %>
 
     <%= list_item { 'Display' } %>
+    <%= list_item { 'Highlight' } %>
     <%= list_item { 'Edit' } %>
 
     <%= list_item 'large-1 hide-for-medium-down text-center last' do 'Delete' end %>
