--- a/app/views/optimadmin/products/index.html.erb
+++ b/app/views/optimadmin/products/index.html.erb
@@ -13,11 +13,12 @@
   </div>
 
   <div class="row collapse module-list-index header">
-    <%= list_item 'large-7 small-8' do 'Title' end %>
+    <%= list_item 'large-6 small-8' do 'Title' end %>
 
     <%= list_item 'large-2 hide-for-medium-down' do 'Image' end %>
 
     <%= list_item { 'Display' } %>
+    <%= list_item { 'Highlight' } %>
     <%= list_item { 'Edit' } %>
 
     <%= list_item 'large-1 hide-for-medium-down text-center last' do 'Delete' end %>
