--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -9,8 +9,8 @@
 </div>
 
 <header class="row collapse content-area">
-  <div class="small-6 medium-2 columns">
-    <%= logo_link(@industry) %>
+  <div class="small-12 text-center medium-2 columns">
+    <%= logo_link @industry %>
   </div>
 
   <div class="small-12 medium-10 columns">
@@ -26,7 +26,11 @@
     </div>
 
     <div class="header-navigation">
-      <ul class="primary navigation">
+      <%= link_to '#', class: 'show-for-small toggle-class menu-toggle', data: { container: '.primary.navigation', class: 'hide-for-small', return: 'true' } do %>
+       <span class="menu-icon">Menu</span>
+      <% end %>
+
+      <ul class="primary navigation hide-for-small">
         <%= nested_menu_items(menu_items: @header_menu.menu_items) %>
       </ul>
     </div>
