--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,7 +47,7 @@
           <%= @product.download_technical_specification %>
 
           <% if @product.has_video? %>
-            <div class="product-video">
+            <div class="product-video flex-video">
               <div class="product-video-title">
                 Watch <%= @product.title %> in Action
               </div>
