--- a/app/views/optimadmin/pages/_page.html.erb
+++ b/app/views/optimadmin/pages/_page.html.erb
@@ -1,10 +1,6 @@
 <div class="row collapse module-list-index <%= cycle('odd', 'even') %>" data-equalizer="module-list" id="item_<%= page_presenter.id %>">
-  <div class="large-1 small-2 columns" data-equalizer-watch="module-list">
-    <%= page_presenter.detail_toggle_link %>
-  </div>
-
   <div class="large-3 small-6 columns" data-equalizer-watch="module-list">
-    <%= page_presenter.title %>
+    <%= page_presenter.toggle_title %>
   </div>
 
     <div class="large-2 small-6 columns" data-equalizer-watch="module-list">
