--- a/app/views/optimadmin/products/_form.html.erb
+++ b/app/views/optimadmin/products/_form.html.erb
@@ -58,7 +58,7 @@
       </div>
 
     <div class="field">
-      This field is used if there is only one product group for the industry.
+      This field is used if there is only one product group for the industry.<br />
       <%= f.label :home_highlight %><br>
         <%= f.check_box :home_highlight %>
       </div>
