--- a/app/views/optimadmin/products/_product.html.erb
+++ b/app/views/optimadmin/products/_product.html.erb
@@ -7,7 +7,7 @@
 
 
     <div class="large-2 hide-for-medium-down columns" data-equalizer-watch="module-list">
-      <%= product_presenter.edit_image(:image)%>
+      <%= product_presenter.edit_image(:image, 'product_range_id', product_presenter.product_range_id)%>
     </div>
 
 
