--- a/app/assets/stylesheets/lib/variables.scss
+++ b/app/assets/stylesheets/lib/variables.scss
@@ -12,7 +12,7 @@ $error: #a4232f;
 
 $link-blue: #20446b;
 
-$background-color: #f0f6ff;
+$background-color: #e3e8ef;
 $content-background-color: #f9fbff;
 
 $primary-yellow: #fefa02;
