Snags: page names in nav, logo link and team members

--- a/app/views/optimadmin/pages/_form.html.erb
+++ b/app/views/optimadmin/pages/_form.html.erb
@@ -44,7 +44,7 @@
   <%= field_set_tag nil, id: 'tabs-3' do %>
   <div class="field">
 <%= f.label :industry_id %><br>
-<%= f.select :industry_id, Industry.all.map{|x| [x.name, x.id]}, prompt: 'Please select industry' %>
+<%= f.select :industry_id, Industry.all.map{|x| [x.name, x.id]}, include_blank: 'No industry' %>
 </div>
 
     <div class="field<%= ' hide' if Page.styles.size < 2 %>">
