--- a/app/assets/stylesheets/components/product_ranges.scss
+++ b/app/assets/stylesheets/components/product_ranges.scss
@@ -1,5 +1,6 @@
 .product-range {
-  display: inline-block;
+  display: block;
+  float: left;
   border-bottom-width: 3px;
   border-bottom-style: solid;
   margin: em(15px) em(5px);
