--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -16,7 +16,7 @@
   <div class="small-12 medium-10 columns">
     <div class="header-introduction">
       <div class="tagline">
-        "Supplying commercial oil and lubricants for over <span class="years-emphasis">100 years</span>"
+        "Supplying a wide range of lubricants for over <span class="years-emphasis">100 years</span>"
       </div>
 
       <div class="call text-right">
