--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,8 +8,9 @@
       <%= product_presenter.title %>
     </div>
   </div>
-
+  <!--
   <div class="product-summary">
-    <%= product_presenter.summary %>
+    <%#= product_presenter.summary %>
   </div>
+  -->
 <% end %>
