--- a/app/views/product_ranges/index.html.erb
+++ b/app/views/product_ranges/index.html.erb
@@ -23,11 +23,21 @@
         <%= @industry.name %>
       </div>
 
-      <div class="text-center clearfix">
-        <%= render partial: 'product_ranges/product_range',
-            collection: BaseCollectionPresenter.new(collection: @industry.displayable_product_ranges, view_template: self, presenter: ProductRangePresenter),
-            as: :product_range_presenter
-          %>
+      <div class="row">
+        <div class="small-12 medium-3 columns">
+          <ul class="navigation sidebar">
+            <%= nested_menu_items(menu_items: @static_page_menu_items) %>
+          </ul>
+        </div>
+
+        <div class="small-12 medium-9 columns">
+          <div class="text-center clearfix">
+            <%= render partial: 'product_ranges/product_range',
+                collection: BaseCollectionPresenter.new(collection: @industry.displayable_product_ranges, view_template: self, presenter: ProductRangePresenter),
+                as: :product_range_presenter
+              %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
