--- a/app/assets/stylesheets/lib/variables.scss
+++ b/app/assets/stylesheets/lib/variables.scss
@@ -24,6 +24,8 @@ $main-additional-color: #626262;
 $main-navigation-hover: $main-additional-color;
 $main-grey: #a0a0a0;
 
+$primary-red: #ca001a;
+$cassida-blue: #0d418c;
 
 $primary-blue: #00b9e5;
 $secondary-default-text-color: #1a2b44;
